--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   crypto: ^3.0.3
   equatable: ^2.0.5
   path: ^1.8.3
+  uuid: ^4.5.1
   
   # Desktop window management
   window_manager: ^0.3.7
